[package]
authors = ["Dan Whitman <dwhitman44@gmail.com>"]
edition = "2021"
name = "atsamd51j-blinky"
readme = "README.md"
version = "0.1.0"

[workspace]

[[bin]]
bench = false
name = "atsamd51j-blinky"
test = false

[patch.crates-io]
# TODO: Needed until pygamer v0.10.0 is released
pygamer = {path = "../../../atsamd/boards/pygamer"}

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
pygamer = {version = "0.10.0", features = ["panic_led"]}
rtic = {version = "2.1.1", features = ["thumbv7-backend"]}
# TODO: Be sure to change the features when we use the actual driver
rtic-monotonics = {path = "../../rtic-monotonics", features = ["cortex-m-systick"]}

[profile.dev]
debug = true 
incremental = false 
lto = "thin" # thin for debug speed

[profile.release]
lto = "fat"
opt-level = 's'
